ingress_demostaticip_nohost_nocert.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: nginx
    annotations:
        kubernetes.io/ingress.global-static-ip-name: demostaticip
spec:
    rules:
    - host:
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
