ingress_staticip.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: nginx
    annotations:
        kubernetes.io/ingress.global-static-ip-name: demostaticip
spec:
    rules:
    - host: aivision.ml
      http:
        paths:
        - backend:
            serviceName: nginx
            servicePort: 80
