ingress_staticip_certificate.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: nginx
    annotations:
        kubernetes.io/ingress.global-static-ip-name: demostaticip
        networking.gke.io/managed-certificates: example-nginx-certificate
spec:
    rules:
    - host: aivision.ml
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
